Remove <!DOCTYPE>s. Remove bgcolor attributes from <body> tags. Remove <address>es, <hr>s and "last modified" lines in the footer. Remove links back to the home page. Replace references to egcs by GCC (or remove them). Fix markup and add missing </body> and </html> tags.

--- a/htdocs/badspammer.html
+++ b/htdocs/badspammer.html
@@ -1,11 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <HTML>
-<HEAD><TITLE>The EGCS Project</TITLE>
+
+<HEAD>
+<TITLE>GCC</TITLE>
 </HEAD>
+
 <BODY>
-<DIV align="center">
-<h1><a href="/">The EGCS Project</a></h1>
-</DIV>
+<h1 align="center"><a href="/index.html">GCC</a></h1>
 
 <h1>Spambot detected</h1>
 
