--- a/htdocs/c9xstatus.html
+++ b/htdocs/c9xstatus.html
@@ -1,7 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html><head>
+<html>
+
+<head>
 <title>C9x implementation status</title>
 </head>
+
 <body>
 <h1>Status of C99 features in GCC</h1>
 This table is based on the list in the introduction to the draft
@@ -54,10 +56,6 @@ This table is based on the list in the introduction to the draft
 <tr><td>remove deprecation of<br>aliased array parameters</td><td></td><td>X</td><td></td><td></td><td></td></tr>
 <tr><th>Feature</th><th>Library<br>Issue</th><th>Done</th><th>Broken</th><th>Missing</th><th>Unknown</th></tr>
 </table>
-<small><i>Last modified September 7, 1999.</i></small>
-
-<hr>
-<p><a href="index.html">Return to the GCC home page</a>
 
 </body>
 </html>
