--- a/htdocs/gcc-micro.html
+++ b/htdocs/gcc-micro.html
@@ -1,11 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-		      "http://www.w3.org/TR/html4/loose.dtd">
-<html><head>
+<html>
+
+<head>
 <title>Micro-optimizations</title>
 <link rev="made" href="mailto:zack@wolery.cumb.org">
 </head>
 
-<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
+<body>
 <h1 align="center">Micro-optimizations that GCC should perform</h1>
 
 <p>This page lists places where GCC's code generation is suboptimal and
@@ -843,8 +843,6 @@ are qualified with <code>restrict</code>.
 but high-level transformations like those are outside the scope of
 this document.
 
-<hr>
-<p>Last modified: 29 Jan 2000
 <p>Zack Weinberg, <a
 href="mailto:zack@wolery.cumb.org">&lt;zack@wolery.cumb.org&gt;</a>
 
