--- a/htdocs/libstdc++-v3.html
+++ b/htdocs/libstdc++-v3.html
@@ -1,11 +1,13 @@
 <html>
+
 <head>
-<title>Egcs Standard C++ Library v3</title>
+<title>GCC Standard C++ Library v3</title>
 <META HTTP-EQUIV="REFRESH"
  CONTENT="2; URL=http://www.cygnus.com/~ncm/stdlib.html">
 </head>
+
 <body>
-<h2>Egcs Standard C++ Library v3</h2>
+<h1>GCC Standard C++ Library v3</h1>
 <p>
 The current (temporary) location for this page is
 <blockquote>
@@ -14,5 +16,6 @@ http://www.cygnus.com/~ncm/stdlib.html
 </a>
 </blockquote>
 </p>
+
 </body>
 </html>
