--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -1,9 +1,10 @@
 <html>
+
 <head>
 <title>GCC ftp mirror sites</title>
 </head>
 
-<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
+<body>
 
 <h1 align="center">GCC mirror sites</h1>
 
@@ -98,3 +99,6 @@ where the mirror is located.
 <!-- <li>Japan: <a href="ftp://ring.exp.fujixerox.co.jp/pub/lang/egcs">ring.exp.fujixerox.co.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ring.ip-kyoto.ad.jp/pub/lang/egcs">ring.ip-kyoto.ad.jp</a> !-->
 <!-- <li>Finland (no snapshots): <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a> !-->
+
+</body>
+</html>
