--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -1,10 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html><head>
+<html>
+
+<head>
 <title>GCC Projects</title>
 </head>
 
-<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
-<h1 align=center>Projects</h1>
+<body>
+<h1 align=center>GCC Projects</h1>
 
 <p>These are some potential future projects for GCC.  Most of them have
 to do with the optimizer.  Some are old ideas which might not help
@@ -544,11 +545,6 @@ example:
       specified in the formal definition of the data type
 <li>  References to the literature for the algorithms used in GCC
 </ol>
-
-<small><i>Last modified September 20, 1999.</i></small>
-
-<hr>
-<p><a href="index.html">Return to the GCC home page</a>
 
 </body>
 </html>
