--- a/htdocs/spam.html
+++ b/htdocs/spam.html
@@ -1,7 +1,9 @@
 <html>
+
 <head>
 <title> Dealing with SPAM </title>
 </head>
+
 <body>
 <h1 align="center">Dealing with SPAM</h1>
 
@@ -48,3 +50,6 @@ about SPAM.
      trimming the spammer's address (as I've done) also gets *their*
      email address harvested this way.
 </pre>
+
+</body>
+</html>
