--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -1,9 +1,10 @@
 <html>
+
 <head>
 <title>GCC steering committee</title>
 </head>
 
-<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
+<body>
 
 <h1 align="center">GCC steering committee</h1>
 
@@ -84,13 +85,6 @@ Toon Moene
 Joel Sherrill
 Jim Wilson
 </pre>
-
-<hr>
-<address>
-<a href="about.html">The GCC team</a>
-<br>
-<small><i>Last modified on January 25, 2000.</i></small>
-</address>
 
 </body>
 </html>
