--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -1,9 +1,10 @@
 <html>
+
 <head>
 <title>GCC: About</title>
 </head>
 
-<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
+<body>
 
 <h1 align="center">GCC: About</h1>
 
@@ -25,12 +26,6 @@ changes or contribute some of your own.
 
 <p>Want to contribute? Please check our <a href="web.html">TODO list</a>!</p>
 </p>
-
-<address>
-<a href="about.html">The GCC team</a>
-<br>
-<small><i>Last modified on July 16, 1999.</i></small>
-</address>
 
 </body>
 </html>
