--- a/htdocs/javaannounce.html
+++ b/htdocs/javaannounce.html
@@ -1,7 +1,9 @@
 <html>
+
 <head>
 <title>libgcj Announcement</title>
 </head>
+
 <body>
 <h1 align="center">libgcj Announcement</h1>
 
@@ -32,5 +34,5 @@ homepage at
 <a href="http://sourceware.cygnus.com/java/">
 http://sourceware.cygnus.com/java/</a>
 
-<hr>
-<i>Last modified on April 7, 1999.</i>
+</body>
+</html>
