--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -1,10 +1,11 @@
 <html>
+
 <head>
 <title>Contributors</title>
 </head>
+
 <body>
 <h1 align="center">Contributors</h1>
-
 
 The GCC project would like to thank its many contributors.  Without them the
 project would not have been nearly as successful as it has been.  Any omissions
@@ -245,14 +246,8 @@ testing GCC:
   <li> And many others
 </ul>
 
-
-And finally we'd like to thank everyone who uses the compiler, submits bug
+<p>And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
-
-<p><i>Last modified:  December 13, 1999</i>
-
-<hr>
-<p><a href="index.html">Return to the GCC home page</a>
 
 </body>
 </html>
