--- a/htdocs/web.html
+++ b/htdocs/web.html
@@ -1,9 +1,10 @@
 <html>
+
 <head>
 <title>GCC: Web Pages</title>
 </head>
 
-<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
+<body>
 
 <h1 align="center">GCC: Web Pages</h1>
 
@@ -29,12 +30,6 @@ of being implemented soon. ;-)</p>
 <li>Restore contents of install/specific.html once the testsuite has been
     added again.
 </ul>
-
-<address>
-<a href="about.html">The GCC team</a>
-<br>
-<small><i>Last modified on July 28, 1999.</i></small>
-</address>
 
 </body>
 </html>
