It's GNU GPL, not just GPL.

--- a/htdocs/contributewhy.html
+++ b/htdocs/contributewhy.html
@@ -83,7 +83,7 @@ of your GCC port, which is a waste of your valuable time.</P>
 GCC sources?  We can distribute it ourselves to whoever is
 interested.</EM></P>
 
-<P>Yes, the GPL allows you to do that.  But by doing so, you end up
+<P>Yes, the GNU GPL allows you to do that.  But by doing so, you end up
 having to maintain that code yourself; this can be a significant
 effort over time as the GCC sources change rapidly.</P>
 
