Remove superflous blanks. Add missing </UL> tag. Make the file "MetaHTML-machinery"-clean.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -1,9 +1,10 @@
 <html>
+
 <head>
 <title>GCC online documentation</title>
 </head>
 
-<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
+<body>
 
 <h1 align="center">GCC online documentation</h1>
 
@@ -12,23 +13,21 @@ development.  Some information may not be applicable to any
 existing release.</p>
 
 <ul>
-  <li> <a href="../install/index.html"> GCC Installation Instructions</a>
-  <li> <a href="gcc_toc.html"> GCC Manual</a>
-  <li> <a href="g77_toc.html"> G77 Manual</a>
+  <li><a href="../install/index.html">GCC Installation Instructions</a>
+  <li><a href="gcc_toc.html">GCC Manual</a>
+  <li><a href="g77_toc.html">G77 Manual</a>
   <ul> 
-       <li><a href="g77_news.html"> G77 News</a>
-       <li><a href="g77_bugs.html"> G77 Bugs</a>
+     <li><a href="g77_news.html">G77 News</a>
+     <li><a href="g77_bugs.html">G77 Bugs</a>
   </ul>
-  <li> <a href="ir_toc.html"> Tree Representation Internals</a>
-  <li> <a href="gxxint_toc.html"> G++ Internals Manual</a>
-  <li> <a href="cpp_toc.html"> CPP Manual</a>
-  <li> <a href="gcov_toc.html"> GCOV Manual</a>
-  <li> <a href="iostream_toc.html"> iostream Manual</a>
-  <li> <a href="chill_toc.html"> Chill Manual</a>
-  <li> <a href="objc-features_toc.html"> ObjC Features</a>
-<hr>
-
-<i>Last modified on November 23, 1999.</i>
+  <li><a href="ir_toc.html">Tree Representation Internals</a>
+  <li><a href="gxxint_toc.html">G++ Internals Manual</a>
+  <li><a href="cpp_toc.html">CPP Manual</a>
+  <li><a href="gcov_toc.html">GCOV Manual</a>
+  <li><a href="iostream_toc.html">iostream Manual</a>
+  <li><a href="chill_toc.html">Chill Manual</a>
+  <li><a href="objc-features_toc.html">ObjC Features</a>
+</ul>
 
 </body>
 </html>
