Add a section on how to filter messages from our lists.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -132,6 +132,22 @@ who has said "I can't get off this list!  Unsubscribe me!" has found,
 with enough prodding, that sending mail to the address listed in
 <tt>List-Unsubscribe:</tt> does the trick.
 
+<h2>Filtering</h2>
+
+<p>If you want to use procmail or similar tools to process the GCC
+mailing lists, you can filter using the Sender: header, as well as all
+of the RFC2369 headers (List-Subscribe, List-Unsubscribe, List-Post,
+List-Archive, etc.).</p>
+
+<p>For example, the following procmail rule will sort all mail from
+our lists into a single folder named INLIST.gcc:
+
+<blockquote><code>
+:0<br>
+* ^Sender: gcc(-announce|-bugs|-patches)?-owner@gcc.gnu.org<br>
+INLIST.gcc<br>
+</code></blockquote>
+
 <h2>Help</h2>
 
 <p>For further information on using the lists, send a blank mail to
