--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -131,6 +131,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
       Note also that the lists from 1997-1998 are not here, except for
      ...-announce.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2000-02">Feb 2000
 <option value="gcc/2000-01">Jan 2000
 <option value="gcc/1999-12">Dec 1999
 <option value="gcc/1999-11">Nov 1999
@@ -146,6 +147,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc/1999-01">Jan 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2000-02">Feb 2000
 <option value="gcc-bugs/2000-01">Jan 2000
 <option value="gcc-bugs/1999-12">Dec 1999
 <option value="gcc-bugs/1999-11">Nov 1999
@@ -160,6 +162,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-bugs/1999-02">Feb 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2000-02">Feb 2000
 <option value="gcc-patches/2000-01">Jan 2000
 <option value="gcc-patches/1999-12">Dec 1999
 <option value="gcc-patches/1999-11">Nov 1999
@@ -174,6 +177,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-patches/1999-02">Feb 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2000-02">Feb 2000
 <option value="gcc-help/2000-01">Jan 2000
 <option value="gcc-help/1999-12">Dec 1999
 <option value="gcc-help/1999-11">Nov 1999
@@ -181,6 +185,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2000-02">Feb 2000
 <option value="gcc-cvs/2000-01">Jan 2000
 <option value="gcc-cvs/1999-12">Dec 1999
 <option value="gcc-cvs/1999-11">Nov 1999
@@ -196,6 +201,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-cvs/1999-01">Jan 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2000-02">Feb 2000
 <option value="gcc-testresults/2000-01">Jan 2000
 <option value="gcc-testresults/1999-12">Dec 1999
 <option value="gcc-testresults/1999-11">Nov 1999
