Changed use of 'X' in table to longer titles.  HTML reformat.  Removed <br> tags from "Library Issues". By Rich Churcher <churchmouse@mpx.com.au>. Add <em> tags around row headings. Sync <title> and <h1>.

--- a/htdocs/c9xstatus.html
+++ b/htdocs/c9xstatus.html
@@ -1,60 +1,240 @@
 <html>
 
 <head>
-<title>C9x implementation status</title>
+<title>Status of C99 features in GCC</title>
 </head>
 
 <body>
 <h1>Status of C99 features in GCC</h1>
-This table is based on the list in the introduction to the draft
-(document n869)
+
+<p>This table is based on the list in the introduction to the draft
+(document n869).</p>
+
 <table border>
-<tr><th>Feature</th><th>Library<br>Issue</th><th>Done</th><th>Broken</th><th>Missing</th><th>Unknown</th></tr>
-<tr><td>iso646.h</td><td>X</td><td></td><td></td><td></td><td></td></tr>
-<tr><td>wchar.h</td><td>X</td><td></td><td></td><td></td><td></td></tr>
-<tr><td>restricted pointers</td><td></td><td>X</td><td></td><td></td><td></td></tr>
-<tr><td>variable length array</td><td></td><td></td><td>X</td><td></td><td></td></tr>
-<tr><td>flexible array members</td><td></td><td></td><td></td><td>X</td><td></td></tr>
-<tr><td>complex</td><td></td><td></td><td>X</td><td></td><td></td></tr>
-<tr><td>tgmath.h</td><td>X</td><td></td><td></td><td></td><td></td></tr>
-<tr><td>long long</td><td></td><td>X</td><td></td><td></td><td></td></tr>
-<tr><td>increased limits</td><td></td><td>X</td><td></td><td></td><td></td></tr>
-<tr><td>removed implicit int</td><td></td><td>X</td><td></td><td></td><td></td></tr>
-<tr><td>vscanf</td><td>X</td><td></td><td></td><td></td><td></td></tr>
-<tr><td>reliable integer divisions</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>UCS names</td><td></td><td></td><td></td><td>X</td><td></td></tr>
-<tr><td>extended identifiers</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>binary floating point literals +<br>printf support</td><td>X</td><td>X</td><td></td><td></td><td></td></tr>
-<tr><td>compound literals</td><td></td><td></td><td>X</td><td></td><td></td></tr>
-<tr><td>designated initializers</td><td></td><td></td><td>X</td><td></td><td></td></tr>
-<tr><td>//comments</td><td></td><td>X</td><td></td><td></td><td></td></tr>
-<tr><td>inttypes.h/stdint.h</td><td>X</td><td></td><td></td><td></td><td></td></tr>
-<tr><td>remove implicit function declaration</td><td></td><td>X</td><td></td><td></td><td></td></tr>
-<tr><td>preprocessor arithmetic<br>done in intmax_t/uintmax_t</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>mixed declarations and code</td><td></td><td></td><td></td><td>X</td><td></td></tr>
-<tr><td>integer constant type rules</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>integer promotion rules</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>vararg macros</td><td></td><td>X</td><td></td><td></td><td></td></tr>
-<tr><td>additional math library functions</td><td>X</td><td></td><td></td><td></td><td></td></tr>
-<tr><td>floating-point environment access<br>in fenv.h</td><td>X</td><td></td><td></td><td></td><td></td></tr>
-<tr><td>IEC 60559</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>trailing comma allowed in enum declaration</td><td></td><td>X</td><td></td><td></td><td></td></tr>
-<tr><td>%lf conversion specifier<br>allowed in printf</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>inline functions</td><td></td><td></td><td>X</td><td></td><td></td></tr>
-<tr><td>snprintf</td><td>X</td><td></td><td></td><td></td><td></td></tr>
-<tr><td>boolean type in stdbool.h</td><td>X</td><td></td><td></td><td></td><td></td></tr>
-<tr><td>idempotent type qualifiers</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>empty macro arguments</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>new struct type compatibility<br>rules (tag compatibility)</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>_Pragma preprocessing operator</td><td></td><td></td><td></td><td>X</td><td></td></tr>
-<tr><td>standard pragmas</td><td></td><td></td><td></td><td>X</td><td></td></tr>
-<tr><td>__func__ predefined identifier</td><td></td><td>X</td><td></td><td></td><td></td></tr>
-<tr><td>VA_COPY macro</td><td></td><td></td><td></td><td>X</td><td></td></tr>
-<tr><td>additional strftime conversion specifiers</td><td>X</td><td></td><td></td><td>X</td><td></td></tr>
-<tr><td>LIA compatibility annex</td><td></td><td></td><td></td><td></td><td>X</td></tr>
-<tr><td>deprecate ungetc at the<br>beginning of a binary file</td><td>X</td><td></td><td></td><td></td><td></td></tr>
-<tr><td>remove deprecation of<br>aliased array parameters</td><td></td><td>X</td><td></td><td></td><td></td></tr>
-<tr><th>Feature</th><th>Library<br>Issue</th><th>Done</th><th>Broken</th><th>Missing</th><th>Unknown</th></tr>
+<tr><th>Feature</th>
+    <th>Library Issue</th>
+    <th>Done</th>
+    <th>Broken</th>
+    <th>Missing</th>
+    <th>Unknown</th>
+</tr>
+
+<tr><td><em>iso646.h</em></td>
+    <td>Library Issue</td>
+    <td></td><td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>wchar.h</em></td>
+    <td>Library Issue</td>
+    <td></td><td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>restricted pointers</em></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>variable length array</em></td>
+    <td></td><td></td><td>Broken</td>
+    <td></td><td></td>
+</tr>
+
+<tr><td><em>flexible array members</em></td>
+    <td></td><td></td><td></td><td>Missing</td>
+    <td></td>
+</tr>
+
+<tr><td><em>complex</em></td>
+    <td></td><td></td><td>Broken</td>
+    <td></td><td></td>
+</tr>
+
+<tr><td><em>tgmath.h</em></td>
+    <td>Library Issue</td>
+    <td></td><td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>long long</em></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>increased limits</em></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>removed implicit int</em></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>vscanf</em></td>
+    <td>Library Issue</td>
+    <td></td><td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>reliable integer divisions</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>UCS names</em></td>
+    <td></td><td></td><td></td><td>Missing</td>
+    <td></td>
+</tr>
+
+<tr><td><em>extended identifiers</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>binary floating point literals +<br>printf support</em></td>
+    <td>Library Issue</td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>compound literals</em></td>
+    <td></td><td></td><td>Broken</td>
+    <td></td><td></td>
+</tr>
+
+<tr><td><em>designated initializers</em></td>
+    <td></td><td></td><td>Broken</td>
+    <td></td><td></td>
+</tr>
+
+<tr><td><em>//comments</em></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>inttypes.h/stdint.h</em></td>
+    <td>Library Issue</td>
+    <td></td><td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>remove implicit function declaration</em></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>preprocessor arithmetic<br>done in intmax_t/uintmax_t</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>mixed declarations and code</em></td>
+    <td></td><td></td><td></td><td>Missing</td>
+    <td></td>
+</tr>
+
+<tr><td><em>integer constant type rules</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>integer promotion rules</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>vararg macros</em></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>additional math library functions</em></td>
+    <td>Library Issue</td>
+    <td></td><td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>floating-point environment access<br>in fenv.h</em></td>
+    <td>Library Issue</td>
+    <td></td><td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>IEC 60559</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>trailing comma allowed in enum declaration</em></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>%lf conversion specifier<br>allowed in printf</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>inline functions</em></td>
+    <td></td><td></td><td>Broken</td>
+    <td></td><td></td>
+</tr>
+
+<tr><td><em>snprintf</em></td>
+    <td>Library Issue</td>
+    <td></td><td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>boolean type in stdbool.h</em></td>
+    <td>Library Issue</td>
+    <td></td><td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>idempotent type qualifiers</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>empty macro arguments</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>new struct type compatibility<br>rules (tag compatibility)</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>_Pragma preprocessing operator</em></td>
+    <td></td><td></td><td></td><td>Missing</td>
+    <td></td>
+</tr>
+
+<tr><td><em>standard pragmas</em></td>
+    <td></td><td></td><td></td><td>Missing</td>
+    <td></td>
+</tr>
+
+<tr><td><em>__func__ predefined identifier</em></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>VA_COPY macro</em></td>
+    <td></td><td></td><td></td><td>Missing</td>
+    <td></td>
+</tr>
+
+<tr><td><em>additional strftime conversion specifiers</em></td>
+    <td>Library Issue</td><td></td><td></td><td>Missing</td>
+    <td></td>
+</tr>
+
+<tr><td><em>LIA compatibility annex</em></td>
+    <td></td><td></td><td></td><td></td><td>Unknown</td>
+</tr>
+
+<tr><td><em>deprecate ungetc at the<br>beginning of a binary file</em></td>
+    <td>Library Issue</td>
+    <td></td><td></td><td></td><td></td>
+</tr>
+
+<tr><td><em>remove deprecation of<br>aliased array parameters</em></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
+</tr>
+
+<tr><th>Feature</th>
+    <th>Library Issue</th>
+    <th>Done</th>
+    <th>Broken</th>
+    <th>Missing</th>
+    <th>Unknown</th>
+</tr>
 </table>
 
 </body>
