Sync <title> and <h1>. Remove superflous <h2> and duplicate "end of page" tags.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -1,14 +1,12 @@
 <html>
 
 <head>
-<title>GCC ftp mirror sites</title>
+<title>GCC mirror sites</title>
 </head>
 
 <body>
 
 <h1 align="center">GCC mirror sites</h1>
-
-<h2><a name="mirrors">MIRROR LISTS</a></h2>
 
 <p>These sites mirror the GCC ftp directory directly.  The official
 gcc.gnu.org server is in California in the US.  Please let us know
@@ -68,20 +66,8 @@ if you are mirroring the GCC pages so we can note it here!
 
 <p>If you wish to host a new mirror site, please contact
 <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a>.  Include the
-name of the ftp server, the path to the GCC mirror and the country/city
+name of the server, the path to the GCC mirror and the country/city
 where the mirror is located.
-
-<p><a href="index.html">Return to the GCC home page</a>
-
-<hr>
-<address>
-<a href="about.html">The GCC team</a>
-<br>
-<small><i>Last modified on November 24, 1999.</i></small>
-</address>
-
-</body>
-</html>
 
 <!-- <li>US (Merrifield, VA): <a href="ftp://mirrors.rcn.com:/pub/egcs/">mirrors.rcn.com</a>! !-->
 <!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> !-->
