--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -26,6 +26,9 @@ Successful
 <p><b>alphaev5-dec-osf4.0f</b><br>
 Successful
 
+<p><b>alphaev56-dec-osf4.0b</b><br>
+Successful
+
 <p><b>alphaev56-dec-osf4.0c</b><br>
 Successful
 
@@ -190,7 +193,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on January 31, 1999.</i>
+<i>Last modified on February 3, 1999.</i>
 
 </body>
 </html>
