Add a reference to www.opengroup.org.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -304,6 +304,9 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 
   <li><a href="http://www.mkp.com/books_catalog/1-55860-320-4.asp">New compiler book</a>.  Online appendix includes some compiler links.
 
+  <li><a href="http://www.opengroup.org/">The Open Group</a> has quite a bit
+  on POSIX etc.
+                                                          
 </ul>
  
 </body>
