--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -37,14 +37,14 @@ reach them is the gcc <a href="lists.html">mailinglist</a>.
 <li>Jim Wilson (Cygnus)
 </ul>
 
-<small><p>Membership in the steering committee is a personal membership.
+<p><small>Membership in the steering committee is a personal membership.
 Affiliations are listed for identification purposes only; steering
 committee members do not represent their employers or academic
-institutions.</p>
+institutions.</small></p>
 
-<p>Generally speaking, committee members were chosen to represent
+<p><small>Generally speaking, committee members were chosen to represent
 the interests of communities (e.g. Fortran users, embedded systems
-developers, kernel hackers), not companies.</p></small>
+developers, kernel hackers), not companies.</small></p>
 
 <h2>The original announcement from November 10, 1998:</h2>
 
