--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -167,6 +167,9 @@ Successful
 <p><b>rs6000-ibm-aix4.3.2.0</b><br>
 Successful
 
+<p><b>rs6000-ibm-aix4.3.3.0</b><br>
+Successful
+
 <p><b>sparc-sun-solaris2.4</b><br>
 Successful
 
@@ -193,7 +196,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on February 3, 1999.</i>
+<i>Last modified on February 7, 1999.</i>
 
 </body>
 </html>
