--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -142,6 +142,9 @@ Successful
 <p><b>mipsel-unknown-linux-gnu</b><br>
 Un-successful.  Needs tweaks to gcc/mips/linux.h
 
+<p><b>powerpc-ibm-aix4.1.3.0</b><br>
+Successful
+
 <p><b>powerpc-ibm-aix4.2.1.0</b><br>
 Successful
 
