--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -61,9 +61,12 @@ Please keep this list in alphabetical order.
 <p>
 <ul>
 <li>Geoff Berry for his object serialization work and various patches.
-<li>Hans-J. Boehm for his <a href="http://reality.sgi.com/boehm/gc.html">garbage collector</a>.
+<li>Hans-J. Boehm for his <a href="http://reality.sgi.com/boehm/gc.html">garbage collector</a> and other work.
 <li>Godmar Back for his improvements and encouragement.
+<li>Scott Bambrough for help porting the compiler.
 <li>Per Bothner for dreaming up, designing and implementing much of gcj.
+<li>Joerg Brunsmann for compiler hacking and help with the FAQ.
+<li>Glenn Chambers for help with the FAQ.
 <li>Steve Chamberlain for config fixes and the picoJava port.
 <li>John-Marc Chandonia for various library patches.
 <li>Eric Christopher for his porting help and clean-ups.
@@ -83,7 +86,8 @@ great compiler work.
 <li>All of the Mauve project <a href="http://sourceware.cygnus.com/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&cvsroot=mauve&only_with_tag=HEAD">contributors</a>, for test code.
 <li>Rainer Orth for configuration clean-ups and porting help.
 <li>Alexandre Petit-Bianco for implementing much of the compiler, and continued maintainership.
-<li>Jeff Sturm for porting help and encouragement.
+<li>Bradley Schatz for his work on the FAQ.
+<li>Jeff Sturm for porting help, bug fixes, and encouragement.
 <li>Tom Tromey for his many contributions and libgcj maintainership.
 <li>Matt Welsh for help with Linux Threads.
 <li>Urban Widmark for help fixing java.io.
@@ -101,10 +105,11 @@ in testing GCJ:
 <li>David Billinghurst
 <li>Jim Blandy
 <li>Stephane Bortzmeyer
-<li>Joerg Brunsmann
 <li>Bradford Castalia
+<li>Ralph Doncaster
 <li>Richard Emberson
 <li>Mark K. Gardner
+<li>Charles Gauthier
 <li>Simon Gornall
 <li>John Griffin
 <li>Kevin B. Hendricks
@@ -112,7 +117,10 @@ in testing GCJ:
 <li>Amancio Hasty 
 <li>Joep Jansen
 <li>Tobias Kuipers
+<li>Anand Krishnaswamy
+<li>Jesse Macnish
 <li>Anon A. Mous
+<li>Stefan Morrell
 <li>Pekka Nikander
 <li>Jon Olson
 <li>Paul Reilly
@@ -122,6 +130,7 @@ in testing GCJ:
 <li>Franz Sirl
 <li>Adam Sulmicki
 <li>Frederik Warg
+<li>David E. Young
 </ul>
 
 Thank you all!
@@ -134,7 +143,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.2 1999/10/02 16:29:22 green Exp $
+$Id: thanks.html,v 1.3 1999/12/03 02:59:36 green Exp $
 </small>
 </address>
 
