Rename gcc-micro.html to proj-optimize.html; tweak C99 compliance lists

--- a/htdocs/proj-optimize.html
+++ b/htdocs/proj-optimize.html
@@ -1,18 +1,15 @@
 <html>
 
 <head>
-<title>Micro-optimizations</title>
+<title>Optimizer deficiencies</title>
 <link rev="made" href="mailto:zack@wolery.cumb.org">
 </head>
 
 <body>
-<h1 align="center">Micro-optimizations that GCC should perform</h1>
+<h1 align="center">Deficiencies of GCC's optimizer</h1>
 
-<p>This page lists places where GCC's code generation is suboptimal and
-the problem can be shown in a few lines of assembly output, hence
-"micro-optimizations."  I'll be updating it as I notice new issues.
-Please send suggestions to <a
-href="mailto:zack@wolery.cumb.org">zack@wolery.cumb.org</a>.
+<p>This page lists places where GCC's code generation is suboptimal.
+Although the examples are small, the problems are usually quite deep.
 
 <p>Note: unless otherwise specified, all examples have been compiled
 with the current CVS tree as of the date of the example, on x86, with
