--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -14,7 +14,7 @@ very much anymore, but who knows?
 <p>There is a separate project list for the <a
 href="proj-cpplib.html">C preprocessor</a>.
 
-<p>We also have a page detailing <a href="gcc-micro.html">optimizer
+<p>We also have a page detailing <a href="proj-optimize.html">optimizer
 inadequacies</a>, if you'd prefer to think about it in terms of problems
 instead of features.
 
@@ -32,7 +32,7 @@ don't quite work:
   <li>C99 inline implies static
   <li>VLA (variable length arrays) differ from the GCC extension (what
       difference)?
-  <li>designated initializer syntax differs ([x] = val instead of [x]val)
+  <li>__func__ is not quite the same as GCC's __FUNCTION__
   <li>compound array initialization does not support variables
   <li>under -pedantic, some correct code is rejected (e.g. [0] array members)
 </ul></p>
@@ -41,14 +41,14 @@ don't quite work:
 implemented both for cccp, and <a href="proj-cpplib.html">cpplib</a>:
 <ul>
   <li>_Pragma special token
-  <li>predefined pragmas
 </ul></p>
 
 <p>A number of features is missing in the compiler proper:
 <ul>
-  <li>mixed declarations are not supported
-  <li>various formatting characters are not known in printf/strftime
+  <li>mixed declarations and statements are not supported
+  <li>various formatting characters are not known in printf/strftime (still?)
   <li>support for universal characters
+  <li>standard pragmas
 </ul></p>
 
 <h2>Haifa scheduler</h2> (haifa-sched.c, loop.[ch], unroll.[ch], genattrtab.c):
