--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -37,6 +37,9 @@ Successful
 <p><b>alphaev56-dec-osf4.0d</b><br>
 Successful
 
+<p><b>alphaev56-dec-osf4.0f</b><br>
+Successful
+
 <p><b>alphaev56-unknown-linux-gnu</b><br>
 Successful
 
