--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -1,11 +1,92 @@
 <html>
 
 <head>
-<title>Frequently Reported Bugs in GCC 2.95</title>
+<title>GCC Bugs</title>
 </head>
 
 <body>
-<h1 align="center">Frequently Reported Bugs in GCC 2.95</h1>
+
+<p><a href="#report">Reporting Bugs</a>
+ | <a href="#known">Frequently Reported Bugs in GCC 2.95</a>
+</p>
+
+<h1><a name="report">Reporting Bugs</a></h1>
+
+<p>The <a href="onlinedocs/">gcc info manual</a>, section Bugs contains
+complete instructions on how to report bugs.
+The manual can also be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if
+the GNU <tt>info</tt> program is installed on your system by `<tt>info --node
+"(gcc)Bugs"</tt>'. Or see the file
+<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/~checkout~/egcs/gcc/BUGS?content-type=text/plain&only_with_tag=HEAD">BUGS</a>
+included with the GCC source code.</p>
+
+<p>Before you report a bug for the <em>C++ compiler</em>, please check
+the <a href="#known">list of well-known bugs</a>. If you want to
+report a bug with <em>egcs 1.0.x</em> or <em>egcs 1.1.x</em>, we
+strongly recommend upgrading to the current release first.</p>
+
+<p>In short, if GCC says <tt>Internal compiler error</tt> (or any
+other error that you'd like us to be able to reproduce, for that
+matter), please mail a bug report to <a
+href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a> or
+<a href="mailto:bug-gcc@gnu.org">bug-gcc@gnu.org</a> including:</p>
+
+<ul>
+  <li>The GCC version</li>
+  <li>The system type</li>
+  <li>All options you passed to the compiler</li>
+  <li>Preprocessed output of the source file that caused the compiler error</li>
+</ul>
+
+<p>All this can normally be accomplished by mailing the command line, the
+output of the command, and the resulting `<tt><i>your-file</i>.i</tt>' for C,
+or `<tt><i>your-file</i>.ii</tt>' for C++, corresponding to:</p>
+
+<p><tt>gcc -v --save-temps <i>all-your-options</i> <i>your-file</i>.c</tt></p>
+
+<p>Typically the CPP output (extension <code>.i</code> for C or
+<code>.ii</code> for C++) will be large, so please compress the
+resulting file with one of the popular compression programs such as
+<tt>bzip2</tt>, <tt>gzip</tt>, <tt>zip</tt>, <tt>pkzip</tt> or
+<tt>compress</tt> (in decreasing order of preference).  Use maximum
+compression (<code>-9</code>) if available.  Please include the
+compressed CPP output in your bug report.</p>
+
+<p>Since we're supposed to be able to re-create the assembly output
+(extension <code>.s</code>), you usually don't have to include it in
+the bug report, although you may want to post parts of it to point out
+assembly code you consider to be wrong.</p>
+
+<p>Whether to use MIME attachments or <code>uuencode</code> is up to
+you.  In any case, make sure the compiler command line, version and
+error output are in plain text, so that we don't have to decode the
+bug report in order to tell who should take care of it.  A meaningful
+subject indicating language and platform also helps.</p>
+
+<p>The gcc lists have message size limits (100 kbytes) and bug reports
+over those limits will currently be bounced.  We're trying to find a
+way to allow larger bug reports to be posted, but this is currently
+impossible (unless you use MIME partials, which most people are unable
+to handle anyway, so you'd better avoid them for now).  So, although
+we prefer to have complete bug reports archived, if you cannot reduce
+the bug report below the limit, please make it available for ftp or
+http and post the URL.  Another alternative is to break the
+preprocessed output in multiple files (using <code>split</code>, for
+example) and post them in separate messages, but we prefer to have
+self-contained bug reports in single messages.</p>
+
+<p>If you fail to supply enough information for a bug report to be
+reproduced, someone will probably ask you to post additional
+information (or just ignore your bug report, if they're in a bad day,
+so try to get it right on the first posting :-).  In this case, please
+post the additional information to the bug reporting mailing list, not
+just to the person who requested it, unless explicitly told so.  If
+possible, please include in this follow-up all the information you had
+supplied in the incomplete bug report (including the preprocessor
+output), so that the new bug report is self-contained.</p>
+
+
+<h1><a name="known">Frequently Reported Bugs in GCC 2.95</a></h1>
 
 <p>The latest version of this document is always available at <a href="
 http://gcc.gnu.org/bugs.html">http://gcc.gnu.org/bugs.html</a>.
